--- a/RuuviInfoTV/Base.lproj/Main.storyboard
+++ b/RuuviInfoTV/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="light"/>
     </device>
     <dependencies>
-        <deployment identifier="tvOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,11 +25,11 @@
                                 <rect key="frame" x="90" y="60" width="1740" height="960"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RuuviInfoCell" textLabel="M2k-lF-gL5" detailTextLabel="aaV-Bg-xBf" rowHeight="100" style="IBUITableViewCellStyleSubtitle" id="q19-hQ-lEf">
+                                    <tableViewCell contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="RuuviInfoCell" textLabel="M2k-lF-gL5" detailTextLabel="aaV-Bg-xBf" rowHeight="100" style="IBUITableViewCellStyleSubtitle" id="q19-hQ-lEf">
                                         <rect key="frame" x="0.0" y="66" width="1740" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="q19-hQ-lEf" id="iZE-Ph-GLE">
-                                            <rect key="frame" x="0.0" y="0.0" width="1740" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="1680" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="M2k-lF-gL5">
